@@ -1,0 +1,132 @@
+<html> 
+	<head> 
+		<title>README for Born APBS examples</title>
+	</head>
+
+	<body>
+
+
+		<h1 align="center">README for Born APBS examples</h1>
+		<i> $Id: README.html 1264 2008-04-16 16:41:31Z yhuang01 $</i>
+
+		<p> This is the canonical electrostatics test case: Born ion.  A non-polarizable ion with a single
+		embedded point charge; has an analytical solution for the potential.  We examine the solvation free
+		energy as a function of ionic radius. </p>
+
+		<p> The shell script ./runme.sh will generate ions of several radii and calculate the solvation energies
+		(which will appear in OUTPUT-XXX, where XXX is the particular radius of interest).  Please see apbs.in
+		for details on the particular solvation energy calculations.  Analytical results are given in pmf.dat.
+		Note:  You will need to ensure that the 'apbs' binary is in your path prior to running ./runme.sh.
+		You may also need to edit the path to your Bourne-like shell in the ./runme.sh script.   </p>
+
+		<p> This example was contributed by Nathan Baker.</p>
+
+
+		<table align="center" border="1" cellpadding="3" cellspacing="1"> 
+			<tr><th>Input File</th><th>Description</th><th>APBS Version</th><th>Results (kJ/mol)</th><th>Analytical (kJ/mol)</th></tr>
+
+			<tr>
+			  <td rowspan=15><a href="apbs-mol-auto.in">apbs-mol-auto.in</a></td>
+			  <td rowspan=15>Sequential, 3 A sphere, 3-level focusing to 0.188 A, srfm mol</td>
+			  <td align=center><B>1.0.0</B></td>
+			  <td align=center><B>-229.7735</B> </td>
+			  <td rowspan=15>-228.57</td>
+		  </tr>
+			<tr>
+				<td align=center>0.5.1</td><td align=center>-229.7735
+				</td>
+			</tr>
+			<tr>
+				<td align=center>0.5.0</td><td align=center>-229.7735
+				</td>
+			</tr>
+			<tr> <td align=center>0.4.0</td><td align=center>-229.7735<sup><a href="#1">1</a></sup></td> 
+			</tr>
+			<tr><td align=center>0.3.2</td><td align=center>-229.7248</td></tr>
+			<tr><td align=center>0.3.1</td><td align=center>-229.7248</td></tr>
+			<tr><td align=center>0.3.0</td><td align=center>-229.7248</td></tr>
+			<tr><td align=center>0.2.6</td><td align=center>-229.7248</td></tr>
+			<tr><td align=center>0.2.5</td><td align=center>-229.7248</td></tr>
+			<tr><td align=center>0.2.4</td><td align=center>-227.1859</td></tr>
+			<tr><td align=center>0.2.3</td><td align=center>-227.1589</td></tr>
+			<tr><td align=center>0.2.2</td><td align=center>-227.186</td></tr>
+			<tr><td align=center>0.2.1</td><td align=center>-227.19</td></tr>
+			<tr><td align=center>0.2.0</td><td align=center>-227.19</td></tr>
+			<tr><td align=center>0.1.8</td><td align=center>-227.19</td> </tr>
+
+			<tr>
+			  <td rowspan=4><a href="apbs-smol-auto.in">apbs-smol-auto.in</a></td>
+			  <td rowspan=4>Sequential, 3 A sphere, 3-level focusing to 0.188 A, srfm smol</td>
+			  <td align=center><B>1.0.0</B></td>
+			  <td align=center><strong>-229.0123 </strong></td>
+			  <td rowspan=4>-228.57</td>
+		  </tr>
+			<tr>
+				<td align=center>0.5.1</td><td align=center>-229.0123
+				</td>
+			</tr>
+			<tr>
+				<td align=center>0.5.0</td><td align=center>-229.0123
+				</td>
+			</tr>
+            <tr> <td align=center>0.4.0</td><td align=center>-229.0123</td> </tr>
+            
+			<tr>
+			  <td rowspan=5><a href="apbs-mol-parallel.in">apbs-mol-parallel.in</a></td>
+			  <td rowspan=5>Parallel with 4 processors, 3 A sphere, focusing to 0.103 A, srfm mol</td>
+			  <td align=center><B>1.0.0</B></td>
+			  <td align=center><strong>-230.4916 </strong></td>
+			  <td rowspan=5>-228.57</td>
+		  </tr>
+			<tr>
+				<td align=center>0.5.1</td><td align=center>-230.4916
+				</td>
+			</tr>
+			<tr>
+				<td align=center>0.5.0</td><td align=center>-230.4916
+				</td>
+			</tr>
+			<tr> <td align=center>0.4.0</td><td align=center>-230.4916</td> </tr>
+			<tr><td align=center>0.2.1</td><td align=center>-230.77</td></tr>
+
+			<tr>
+			  <td rowspan=14><a href="apbs-smol-parallel.in">apbs-smol-parallel.in</a></td>
+			  <td rowspan=14>Parallel with 4 processors, 3 A sphere, focusing to 0.103 A, srfm smol</td>
+			  <td align=center><strong>1.0.0</strong></td>
+			  <td align=center><strong>-229.3872 </strong></td>
+			  <td rowspan=14>-228.57</td>
+		  </tr>
+			<tr>
+				<td align=center>0.5.1</td><td align=center>-229.3872
+				</td>
+			</tr>
+			<tr>
+				<td align=center>0.5.0</td><td align=center>-229.3872
+				</td>
+			</tr>
+			<tr> <td align=center>0.4.0</td><td align=center>-229.3872<sup><a href="#1">1</a></sup></td> </tr>
+			<tr><td align=center>0.3.2</td><td align=center>-226.3529</td></tr>
+			<tr><td align=center>0.3.1</td><td align=center>-226.3529</td></tr>
+			<tr><td align=center>0.3.0</td><td align=center>-229.5849</td></tr>
+			<tr><td align=center>0.2.6</td><td align=center>-229.5849</td></tr>
+			<tr><td align=center>0.2.5</td><td align=center>-229.5849</td></tr>
+			<tr><td align=center>0.2.4</td><td align=center>-226.2276</td></tr>
+			<tr><td align=center>0.2.3</td><td align=center>-226.2276</td></tr>
+			<tr><td align=center>0.2.2</td><td align=center>-226.2276</td></tr>
+			<tr><td align=center>0.2.0</td><td align=center>-226.228</td></tr>
+			<tr><td align=center>0.1.8</td><td align=center>-226.23</td> </tr>
+		</table>
+
+		<p> </p><a name=1></a><sup>1</sup>  The discrepancy in values between versions 0.4.0 and 0.3.2 is most likely
+			due to three factors: 
+			<ul> 
+				<li> A bug fix in Vacc_molAcc which removed spurious regions of high internal dielectric
+				values
+				</li><li> A switch in the algorithm used to compute the dielectric smoothing for srfm smol.  
+				</li><li>  The addition of the Vacc sphere density (sdens keyword) as a variable and a change in the default sdens value from 3.0 to 10.0
+			</li></ul>
+			Please see the ChangeLog or the <a href="http://apbs.sourceforge.net/doc">APBS documentation</a> for more information.  
+		<p></p>
+                
+	</body>
+</html>
