@@ -1,0 +1,17 @@
+# Only the x, y, z, charge, and radii fields are read.
+<ion-example>
+  <residue>
+     <resName>ION</resName>
+     <chainID>A</chainID>
+     <resSeq>1</resSeq>
+     <atom>
+        <serial>ATOM</serial>
+        <name>I</name>
+        <x>0.000</x>
+        <y>0.000</y>
+        <z>0.000</z>
+        <charge>1.00</charge>
+        <radius>3.00</radius>
+     </atom>
+  </residue>
+</ion-example>
